# YOLOvsCustomCNN

./: LICENSE  README.md  app.py  config.ini  pyproject.toml
data/calibration/output/: calibration.json  calibration.pkl
data/dataset/: classes.txt  dataset.yaml
data/dataset/labels/: test.cache  train.cache  val.cache
data/dataset/labels/test/: 0a686314-frame_00383.txt  0ba56afa-frame_00137.txt  122cbb14-frame_00161.txt  146c4d42-frame_00401.txt  15955011-frame_00099.txt  1fe66d2e-frame_00449.txt  2bfc737a-frame_00279.txt  2e9fc3e4-frame_00393.txt  341fe28f-frame_00240.txt  4825429b-frame_00047.txt  4936c8d3-frame_00310.txt  49b63ae9-frame_00185.txt  4a01bab8-frame_00131.txt  4bb9a35d-frame_00182.txt  5199482f-frame_00086.txt  5b4af52a-frame_00226.txt  5d0f0485-frame_00236.txt  63345e87-frame_00075.txt  63b30658-frame_00177.txt  718ec24c-frame_00313.txt  748c1f88-frame_00073.txt  7bb24548-frame_00175.txt  (+46 more)
data/raw/labelstudio/: notes.json
src/: ModelManager.py
src/calibration/: calibration.py  capture.py
src/calibration/output/: calibration_data.pkl  calibration_params.txt  camera_matrix.txt  distortion_coefficients.txt
src/cnn/: dataset.py  losses.py  model.py  test.py  train.py
src/depth/: DepthProcessor.py  __init__.py  deprojection.py  transform.py
src/realsense/: RealSense.py
src/ui/: Renderer.py
src/ui/tabs/: calibrage_tab.py  detection_tab.py  training_tab.py
src/yolo/: yolo_compare.py  yolo_config.py  yolo_realtime.py  yolo_test.py  yolo_train.py
utils/: arucoMarkerDetection.py  extract_frames.py  scan_cameras.py  test_camera.py
(+453 files in other folders)
