[project]
name = "sae-audit-application"
version = "0.1.0"
description = "Audit de performance applicative en apprentissage supervisé"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "pyrealsense2>=2.54.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "customtkinter>=5.2.2",
    "pyqt5>=5.15.11",
    "pyqt6>=6.7.1",
    "ultralytics>=8.4.9",
    "tqdm>=4.67.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
